Revert "fix prejoin layout shift when video starts (#219)"
This reverts commit 6260a7648cb7c532c1732c8d3aa9e16e34f13fb1.

--- a/packages/styles/scss/prefab-components/_prejoin.scss
+++ b/packages/styles/scss/prefab-components/_prejoin.scss
@@ -7,29 +7,20 @@
   margin-inline: auto;
   background-color: var(--bg);
 
-  .video-container {
+  video {
+    display: block;
     width: 480px;
     max-width: 100%;
+    height: auto;
+    transform: rotateY(180deg);
     border-radius: var(--lk-border-radius);
-    aspect-ratio: 16 / 10;
-    overflow: hidden;
+  }
 
-    video {
-      max-height: 100%;
-      display: block;
-      transform: rotateY(180deg);
-      object-fit: cover;
-    }
-
-    .placeholder {
-      width: 100%;
-      height: 100%;
-      display: grid;
-      place-content: center;
-      svg {
-        padding: 20%;
-      }
-    }
+  .camera-off-note {
+    width: 100%;
+    height: 11.25rem;
+    background-color: #000;
+    border-radius: var(--lk-border-radius);
   }
 
   .audio-container {
